<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">自贸购</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="my_collection">我的收藏</string>
    <string name="take_goods_address">收货地址</string>
    <string name="recommend_friends">推荐给好友</string>
    <string name="online_service">在线客服</string>
    <string name="service_phone">客服电话</string>
    <string name="setting">设置</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_receive_goods">待收货</string>
    <string name="sales_reture">退货单</string>
    <string name="all_orders">全部订单</string>
    <string name="buyRead">诞生秘密</string>
    <string name="hotGoods">不得不爱</string>
    <string name="Latest">限时特惠</string>
    <string name="featureVideos">星梦奇缘</string>
    <string name="daily_recommend">每日推荐</string>
    <string name="group_special">姐妹成团</string>
    <string name="register">注册</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="auth_code">验证码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="finish">完成</string>
    <string name="password_rules">不少于6位的数字字母</string>
    <string name="find_shop">制作人</string>
    <string name="lively">推荐专题</string>
    <string name="cancel">取消</string>
    <string name="release">发布</string>
    <string name="release_hint">这一刻的想法...</string>
    <string name="location">定位</string>
    <string name="country">国家</string>
    <string name="mark">标签</string>
    <string name="all_photos">所有照片</string>

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_last_time">最后刷新时间: </string>
    <string name="loading_more">加载更多...</string>
    <string name="pic_details">图片详情</string>
    <string name="review">评论</string>
    <string name="sure">确定</string>

    <drawable name="account_button_focused_color">#b41f30</drawable><!--结算Button按下时颜色-->
    <drawable name="account_button_color">#dc283c</drawable><!--结算Button颜色-->
    <string name="newest">最新</string>
    <string name="moods">人气</string>
    <string name="good_food">美食</string>
    <string name="buy">购物</string>
    <string name="sight_spot">景点</string>
    <string name="verify_order">确认订单</string>
    <string name="shipping_address">配送地址</string>
    <string name="products_list">货品清单</string>
    <string name="pay_way">支付方式</string>
    <string name="zhifubao">支付宝</string>
    <string name="we_chat">微信</string>
    <string name="discount_coupon">优惠券</string>
    <string name="products_price">商品金额</string>
    <string name="shuifei">关税</string>
    <string name="yunfei">运费</string>
    
    <string name="receiver_address">收货地址</string>
    <string name="edit_address">编辑收货地址</string>
    
    <string name="command_group_tip">你是团长哦，赶快招呼朋友们来参团吧</string>
    <string name="bind_phone_tip1">为了及时收到系统通知和您的账户安全，请绑定手机号</string>
    <string name="bind_phone_tip2">请设置登录密码，可用于手机账号登录</string>
    <!--################################   友盟value ###############################################-->
    <string name="umeng_share">分享</string>
    <string name="umeng_auth">授权</string>
    <string name="umeng_deleauth">清除对应授权</string>
    <string name="umeng_shake">摇一摇</string>
    <string name="umeng_comment">评论相关</string>
    <string name="umeng_openshare">打开分享面板</string>

    <string name="umeng_share1">默认分享面板可编辑分享页</string>
    <string name="umeng_share2">自定义分享面板可编辑分享页</string>
    <string name="umeng_share3">单平台直接分享</string>
    <string name="umeng_share4">多平台直接分享</string>
    <string name="umeng_share5">默认分享面板可编辑分享页多平台</string>

    <string name="umeng_shakeshotscreen">摇一摇截屏</string>
    <string name="umeng_shakeshare">摇一摇分享</string>
    <string name="umeng_registershake">注册摇一摇</string>

    <string name="umeng_comment1">用户信息</string>
    <string name="umeng_comment2">本地登陆</string>
    <string name="umeng_comment3">本地授权</string>
    <string name="umeng_comment4">好友功能</string>
    <string name="umeng_comment5">评论功能</string>
    <string name="umeng_comment6">注销</string>
    <string name="umeng_comment7">解决事例</string>

    <string name="umeng_nativequery">本地登陆信息查询</string>
    <string name="umeng_loginsina">登陆新浪</string>
    <string name="umeng_logoutsina">登出新浪</string>
    <string name="umeng_loginqq">登陆QQ</string>
    <string name="umeng_logoutqq">登出QQ</string>
    <string name="umeng_loginqzone">登陆QQ空间</string>
    <string name="umeng_logoutzone">登出QQ空间</string>
    <string name="umeng_customlogin">自定义登陆</string>

    <string name="umeng_addfriend">添加好友</string>
    <string name="umeng_getfriendlist">获取好友列表</string>

    <string name="umeng_commentmodular">评论模块</string>
    <string name="umeng_getcommentlist">获取评论列表</string>
    <string name="umeng_sendcomment">发出评论</string>

    <string name="action_settings">设置</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="share_by_weixin">微信分享</string>
    <string name="share_by_qq">QQ分享</string>
    <string name="share_by_yixin">易信分享</string>
    <string name="shake_share">注册摇一摇截图（分享）</string>
    <string name="shake_openshare">注册摇一摇（打开分享面板）</string>
    <string name="shake_scrshot">注册摇一摇（截图）</string>
    <string name="take_scrshot">直接截图</string>
    <string name="play">播放</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="quit">退出</string>
    <string name="video_start_time">00:00</string>
    <string name="goto_video">摇一摇视频截图Activity</string>
    <string name="goto_game">游戏Activity</string>
    <string name="goto_common">普通Activity</string>
    <string name="video">VideoActivity</string>
    <string name="game">GameActivity</string>
    <string name="common">CommonActivity</string>
    <string name="back">返回</string>
    <string name="goto_facebook">添加Facebook分享</string>
    <string name="fb_login">Facebook登录</string>
    <string name="fb_logout">Facebook注销</string>
    <string name="fb_share">Facebook分享</string>
    <string name="laiwang_share">来往分享</string>
    <string name="instagram_share">Instagram分享</string>
    <string name="pocket_share">Pocket分享</string>
    <string name="linkedin_share">LinkedIn分享</string>
    <string name="foursquare_share">FourSquare分享</string>
    <string name="ynote_share">有道云笔记分享</string>
    <string name="evernote_share">印象笔记分享</string>
    <string name="pinterest_share">Pinterest分享</string>
    <string name="custom_platform_share">自定义平台分享</string>
    <string name="login_sina">登录（新浪微博）</string>
    <string name="logout_sina">注销登录（新浪微博）</string>
    <string name="login_qq">登录（QQ）</string>
    <string name="logout_qq">注销登录（QQ）</string>
    <string name="login_qzone">登录（QQ空间）</string>
    <string name="logout_qzone">注销登录（QQ空间）</string>
    <string name="whatsapp_share">whatsapp分享</string>
    <string name="line_share">line分享</string>
    <string name="tumblr_share">tumblr分享</string>
    <string name="kakao_share">Kakao Talk分享</string>
    <string name="flickr_share">flickr分享</string>
    <string name="fb_app_id">567261760019884</string>
    <string name="photo_post">Photo Post</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating Facebook status at </string>
    <string name="ok">OK</string>
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="facebook_app_id">487692214752558</string>
    <string name="rate_toast"><![CDATA[(关税<=50，才能免征哦)]]></string>

    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="product_detail_toast"><![CDATA[本商品使用税率50%,订单关税<=50免征]]></string>
</resources>
