<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background_color">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

        <ImageView
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dip_10"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dip_10"
                android:src="@drawable/close"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_222222"
                android:layout_centerInParent="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/login"/>

        <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dip_10"
                android:textSize="@dimen/text_size_18"
                android:padding="@dimen/dip_5"
                android:textColor="@color/red"
                android:text="@string/register"/>

    </RelativeLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/home_line"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/home_line"
            android:layout_marginTop="@dimen/dip_20"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="@dimen/dip_60"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dip_20"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black_222222"
                    android:text="@string/phone_num"/>

            <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dip_20"
                    android:padding="@dimen/dip_10"
                    android:hint="@string/please_input_phone"
                    android:inputType="phone"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/black_222222"
                    android:background="@null"/>

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/dip_20"
                android:layout_marginRight="@dimen/dip_20"
                android:background="@color/home_line"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

            <TextView
                    android:layout_width="@dimen/dip_60"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dip_20"
                    android:textSize="@dimen/text_size_16"
                    android:textColor="@color/black_222222"
                    android:text="@string/password"/>

            <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dip_20"
                    android:padding="@dimen/dip_10"
                    android:hint="@string/please_input_password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/hint_color"
                    android:textColor="@color/black_222222"
                    android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawable_login_pressed"
            android:layout_marginLeft="@dimen/dip_17"
            android:layout_marginRight="@dimen/dip_17"
            android:layout_marginTop="@dimen/dip_20"
            android:textSize="@dimen/text_size_18"
            android:gravity="center"
            android:textColor="@color/color_login_press"
            android:text="@string/login"/>

    <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_10"
            android:layout_marginLeft="@dimen/dip_20"
            android:padding="@dimen/dip_5"
            android:textColor="@color/black_444444"
            android:textSize="@dimen/text_size_14"
            android:text="@string/forget_password"/>

</LinearLayout>